# mcp-sql

./: .env.example  .gitignore  README.md  mcp_client.py  pyproject.toml  run_sql_demo.bat
src/mcp_sql/: init_database.py  mcp_client.py  mcp_server.py
